--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=ms-catalog
 
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ms-catalog-db
-spring.datasource.username=catalog_username
-spring.datasource.password=T3s4cat@log
+spring.datasource.url=jdbc:mysql://${ms-catalog-server}:${ms-catalog-port}/${ms-catalog-databasedb}
+spring.datasource.username=${ms-catalog-usernamedb}
+spring.datasource.password=${ms-catalog-passworddb}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=${ms-catalog-showsqldb}
 
 api.version=v0
 
-logging.level.web=DEBUG
+logging.level.web=${ms-catalog-log}
 
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui-custom.html
