--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.application.name=ms-catalog
 
-
-spring.datasource.url=jdbc:mysql://${ms-catalog-server}:${ms-catalog-port}/${ms-catalog-databasedb}
-spring.datasource.username=${ms-catalog-usernamedb}
-spring.datasource.password=${ms-catalog-passworddb}
+spring.datasource.url=jdbc:mysql://${MS_CATALOG_SERVER}:${MS_CATALOG_PORT}/${MS_CATALOG_DATABASEDB}
+spring.datasource.username=${MS_CATALOG_USERNAMEDB}
+spring.datasource.password=${MS_CATALOG_PASSWORDDB}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=${ms-catalog-showsqldb}
+#spring.jpa.show-sql=${env.MS_CATALOG_SHOWSQLDB}
 
 api.version=v0
 
-logging.level.web=${ms-catalog-log}
+#logging.level.web=${env.MS_CATALOG_LOG}
 
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui-custom.html
