--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=ms-catalog
 
-spring.datasource.url=jdbc:mysql://${MS_CATALOG_SERVER}:${MS_CATALOG_PORT}/${MS_CATALOG_DATABASEDB}
-spring.datasource.username=${MS_CATALOG_USERNAMEDB}
-spring.datasource.password=${MS_CATALOG_PASSWORDDB}
+spring.datasource.url=jdbc:mysql://34.133.18.252:3306/ms-catalog-db
+spring.datasource.username=catalog_username
+spring.datasource.password=admin12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=${env.MS_CATALOG_SHOWSQLDB}
+spring.jpa.show-sql=true
 
 api.version=v0
 
-#logging.level.web=${env.MS_CATALOG_LOG}
+logging.level.web=DEBUG
 
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui-custom.html
