--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=ms-catalog
 
-spring.datasource.url=jdbc:mysql://34.133.18.252:3306/ms-catalog-db
+#spring.datasource.url=jdbc:mysql://34.133.18.252:3306/ms-catalog-db
 spring.datasource.username=catalog_username
 spring.datasource.password=admin12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.cloud.gcp.sql.instance-connection-name=ms-catalog-321515:us-central1:ms-catalog-db
+spring.cloud.gcp.sql.database-name=ms-catalog-db
+#spring.datasource.url=jdbc:mysql://google/ms-catalog-db?cloudSqlInstance=ms-catalog-321515:us-central1:ms-catalog-db&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
