--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,18 @@
 spring.application.name=ms-catalog
 
-
-spring.datasource.username=catalog_username
-spring.datasource.password=admin12345
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.cloud.gcp.sql.instance-connection-name=ms-catalog-321515:us-central1:ms-catalog-db
-spring.cloud.gcp.sql.database-name=ms-catalog-db
-
-#spring.datasource.url=jdbc:mysql://34.133.18.252:3306/ms-catalog-db
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=${SPRING_SHOW_SQL}
 
 api.version=v0
 
-logging.level.web=DEBUG
+logging.level.web=${SPRING_LOGGING_LEVEL}
 
-springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.enabled=${SPRING_SWAGGER_UI_ENABLED}
 springdoc.swagger-ui.path=/swagger-ui-custom.html 
 
