update handlers exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.jpa.show-sql=${SPRING_SHOW_SQL}
 
 api.version=v0
 
-logging.level.web=${SPRING_LOGGING_LEVEL}
+logging.level.web=DEBUG
 
 springdoc.swagger-ui.enabled=${SPRING_SWAGGER_UI_ENABLED}
 springdoc.swagger-ui.path=/swagger-ui-custom.html 
+
 
